# spelix

./: .env.example  .gitignore  .graphifyignore  .mcp.json  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STRATEGY.md  Spelix_Expert_Reviewer_Guide.docx  agents-strategy.md  backlog.md  decisions.md  docker-compose.dev.yml  docker-compose.prod.yml  generate_expert_guide.cjs  landing-page-plan.md  memory.md  package-lock.json  restart.md
backend/: .dockerignore  .env.example  .gitattributes  CLAUDE.md  Dockerfile  bench_barbell.py  docling_models.sha256  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 002_rls_policies.py  003_add_detection_result.py  004_phase2_rag_coach_brain.py  005_add_chat_messages.py  006_admin_expert_reviews.py  007_enable_realtime_analyses.py  008_beta_requests.py  009_papers_bucket_rls.py  010_add_timing_json.py  011_coach_brain_candidates.py  012_add_compensation_entry_type.py  013_rename_injury_advice_accurate.py  015_rls_admin_tables.py  016_add_requires_technical_review.py  017_add_missing_indexes.py  019_add_analyses_user_id_index.py  020_add_consent_records_composite_index.py  021_add_coach_brain_entries_status_index.py  022_add_threshold_flags.py  0906139da711_add_eval_scores_json_to_coaching_results.py  1862247fad86_rls_chat_expert_reviews.py  2371965f8072_rename_lateral_deviation_px_jsonb_key_.py  47c8e446162e_add_interpolation_fraction_to_rep_.py  616609f042ed_add_lifter_side_to_analyses.py  7c4af3e51f08_threshold_flags_section_check.py  901e432196c4_001_initial_schema.py  9fffb59ba45f_sex_applicability_and_profile_sex.py  cf685bd7e8f8_doi_unique_live_index.py  f2c0572a0bde_widen_review_status_varchar30.py
backend/app/: config.py  config_constants.py  constants.py  db.py  main.py  rate_limit.py
backend/app/agents/: __init__.py  graph.py  nodes.py  state.py  tools.py  tracing.py
backend/app/api/: deps.py
backend/app/cv/: artifact_generation.py  barbell_detection.py  confidence.py  exercise_detection.py  keyframe_extraction.py  lifter_side.py  metric_extraction.py  pose_extraction.py  quality_gates.py  rep_detection.py  sagittal_metrics_registry.py  scoring.py  signal_processing.py  types.py  video_annotator.py  video_probe.py
backend/app/distillation/: __init__.py  cove_brain.py  cove_node.py  extract.py  format.py  graph.py  lifecycle.py  state.py  store.py  validate.py
backend/app/models/: __init__.py  analysis.py  analysis_expert_review.py  base.py  beta_request.py  chat_message.py  coach_brain_candidate.py  coach_brain_entry.py  coaching_result.py  consent_record.py  rag_document.py  rep_metric.py  threshold_flag.py  user_profile.py
backend/app/repositories/: __init__.py  analysis.py  analysis_expert_review.py  beta_request.py  chat_message.py  coach_brain.py  coach_brain_candidate.py  coaching_result.py  consent.py  rag_document.py  rep_metric.py  threshold_flag.py  user_profile.py
backend/scripts/: create_test_tables.py  enqueue_d035_diagnostic.py  provision_qdrant.py  seed_coach_brain.py  seed_research_papers.py
(+666 files in other folders)
