[project]
name = "spelix-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.91.0",
    "arq>=0.27.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "instructor>=1.15.1",
    "matplotlib>=3.10.8",
    "mediapipe==0.10.33",
    "numpy>=2.4.4",
    "openai>=1.30.0",
    "opencv-python-headless>=4.13.0.92",
    "pydantic>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.24",
    "qdrant-client>=1.17.1",
    "redis>=5.3.1",
    "scipy>=1.17.1",
    "sentry-sdk[fastapi]>=2.57.0",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.49",
    "supabase>=2.28.3",
    "uvicorn[standard]>=0.44.0",
    "weasyprint>=68.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require a live database (deselect with '-m not integration')",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
]
