[project]
name = "spelix-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4,<2.0",
    "anthropic>=0.91.0,<1.0",
    "streaq>=6.4.0,<7.0",
    "asyncpg>=0.31.0,<1.0",
    "cohere>=6.1.0,<7.0",
    "fastapi>=0.135.3,<0.136",
    "langchain-anthropic>=0.2.0,<0.3",
    "langchain-core>=0.3.0,<0.4",
    "langfuse>=2.0.0,<5.0",
    "langgraph>=0.2.50,<0.3",
    "langsmith>=0.1.50,<0.2",
    "httpx>=0.28.1,<1.0",
    "instructor>=1.15.1,<2.0",
    "matplotlib>=3.10.8,<4.0",
    "mediapipe==0.10.33",
    "numpy>=2.4.4,<3.0",
    "openai>=1.30.0,<3.0",
    "opencv-python-headless>=4.13.0.92,<5.0",
    "pydantic>=2.12.5,<3.0",
    "email-validator>=2.0,<3.0",
    "python-jose[cryptography]>=3.5.0,<4.0",
    "python-multipart>=0.0.24,<1.0",
    "qdrant-client>=1.17.1,<2.0",
    "redis>=5.3.1,<6.0",
    "scipy>=1.17.1,<2.0",
    "sentry-sdk[fastapi]>=2.57.0,<3.0",
    "slowapi>=0.1.9,<1.0",
    "sqlalchemy[asyncio]>=2.0.49,<3.0",
    "supabase>=2.28.3,<3.0",
    "uvicorn[standard]>=0.44.0,<1.0",
    "weasyprint>=68.1,<70",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# D-055: make the collection boundary explicit so smoke scripts under
# `scripts/oneoff/` that inadvertently define `test_*` helpers are not
# silently picked up. Pre-existing hygiene gap from spelix-auditor M-01
# on PR #92.
testpaths = ["tests"]
markers = [
    "integration: marks tests that require a live database (deselect with '-m not integration')",
    "slow: marks tests that run on real video fixtures (deselect with '-m not slow')",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
]
